--- a/ACMA/Views/Shared/_Layout.cshtml
+++ b/ACMA/Views/Shared/_Layout.cshtml
@@ -8,11 +8,12 @@
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+        <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <link href="~/Content/css/mcustomscrollbar/jquery.mCustomScrollbar.css" rel="stylesheet" />
 
     <link href="~/Content/chosen.css" rel="stylesheet" />
     <link rel="icon" href="Content/img/favicon.ico" type="image/x-icon">
-
+    <link href="~/Content/bootstrap-switch/bootstrap3/bootstrap-switch.min.css" rel="stylesheet" />
     <!-- ./meta section -->
 
     <!--[if lte IE 9]>
@@ -20,7 +21,7 @@
         <![endif]-->
 
     <!-- javascripts -->
-    <script type="text/javascript" src="Scripts/Plugins/modernizr/modernizr.js"></script>
+    @*    <script type="text/javascript" src="Scripts/Plugins/modernizr/modernizr.js"></script>*@
 
     <script>
         window.urlBase = '@Url.Content("~")';
@@ -130,16 +131,17 @@
     <!-- ./page wrapper -->
 
     <!-- javascript -->
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/template")
+    @* @Scripts.Render("~/bundles/jquery")*@
 
+    <script src="~/Scripts/jquery-1.9.1.min.js"></script>
+    @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/bootstrap-switch.min.js"></script>
     <script src="~/Scripts/chosen.jquery.min.js"></script>
     <script src="~/Scripts/jquery.maskedinput.min.js"></script>
-    <link href="~/Content/css/mcustomscrollbar/jquery.mCustomScrollbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="~/Scripts/Plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
+    @Scripts.Render("~/bundles/template")
 
     <!-- Common scripts -->
     <script src="~/Scripts/Common/Common.js"></script>
