--- a/ACMA/Views/User/SearchUser.cshtml
+++ b/ACMA/Views/User/SearchUser.cshtml
@@ -42,17 +42,19 @@
     </div>
 </form>
 
-<table id="DataGridUsersSearch" class="display" width="100%">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>FullName</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>IdProfile</th>
-            <th>Blocked</th>
-            <th>Active</th>
-            <th>Ação</th>
-        </tr>
-    </thead>
-</table>
+<div class="table-responsive">
+    <table id="DataGridUsersSearch" class="display" width="100%">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>FullName</th>
+                <th>Phone</th>
+                <th>Email</th>
+                <th>IdProfile</th>
+                <th>Blocked</th>
+                <th>Active</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+    </table>
+</div>
